# Active-Inference-Demo-Predictive-Coding-Expected-Free-Energy

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: ROADMAP.md  notes.md
scripts/: run_active_demo.py  run_linear_demo.py  run_mnist_demo.py
src/pp_active_inference/: __init__.py  cli.py  mini_pc_active_inference.py  mini_pc_pytorch.py  mnist_foveated_active_inference_lite.py
